--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -16,11 +16,16 @@
     <body>
         <%- include('./partials/header.ejs')%>
         <div >
-            <form action="#" method="GET" class ="form-login" id="login">
+            <form action="/usuarios/log" method="POST" class ="form-login" id="login">
             <h5>Bienvenido a Hebra Libre</h5>
 
             <div class="form-group">
             <input class="input-text" type="text" name="email" placeholder="Email" id="username" data-testid="emailInput" value="">
+            <% if (locals.errors && errors.email) { %>
+            <div class="text-danger">
+                <%= errors.email.msg %>
+            </div>
+            <% } %>
             </div>
         
             <div class="form-group">
