--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -14,7 +14,7 @@
 </head>
 <body>
     <%- include('./partials/header.ejs')%>
-    <form action="#" method="GET" class="form-register">
+    <form action="/usuarios/register" method="POST" class="form-register">
         <h4>Registrate en Hebra Libre</h4>
         <div>
             <label for="name">NOMBRE</label>
