--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,12 +1,7 @@
 
 <header>
     <div class="media">
-        <div class="redes">
-            <a href="https://www.instagram.com/hebralibre/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <!--a href="#"><i class="fab fa-pinterest"></i></a-->
-            <a href="https://www.facebook.com/soyhebralibre" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a href="https://wa.me/+5493884175520" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        </div>
+        
         <div class="nav-bar">
                 <a href="/"><img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo"></a>
         </div>
@@ -14,14 +9,31 @@
             <div class="burger-menu">
                 <a href="#" target="_blank"><i class="fas fa-bars"></i></a>
             </div>
+            <div class="enlaces-contenedor">
+                <div class="redes">
+                    <a href="https://www.instagram.com/hebralibre/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/soyhebralibre" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://wa.me/+5493884175520" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                </div>
             <ul class="enlaces">
-                <li><a href=  "/"   >Home</a></li>
+                <li><a href=  "/"   >Inicio</a></li>
                 <li><a href='/productos/catalogo' >Productos</a></li>
-                <li><a href='/productos/carrito'  >Carrito de Compras</a></li>
-                <li><a href='/usuarios/register'  >Registrarse</a></li>
                 <li><a href='/contact'  >Contacto</a></li>
-                <!--li><a href='/sobre-nosotros'  >Sobre Mi</a></li-->
             </ul>
+            <ul class="enlaces">
+                         
+                    <!-------FALTA AGREGAR VALIDACION DE USUARIO LOGUEADO-------->
+                <!--    
+                <li><a href='/productos/carrito'  ><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href='#' >Mi Cuenta</a></li>
+                <li><a href='#' >Salir</a></li>
+                --> 
+                <li><a href='/usuarios/register'  >Crear Cuenta</a></li>
+                <li><a href='/usuarios/login'  >Ingresar</a></li>
+                
+            </ul>
+             
+            </div>
         </div>
     </div>       
 </header>
