--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Hebralibre</title>
+    <title>Hebralibre</title>
     <link href="/css/home.css" rel="stylesheet">
     <link href="/css/header-footer.css" rel="stylesheet">
 
