--- a/public/css/formAltaProducto.css
+++ b/public/css/formAltaProducto.css
@@ -40,7 +40,7 @@ body {
 
 .campo {
     display: flex;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 
@@ -65,8 +65,15 @@ body {
     background-color: white;
 }
 
-
-
+.text-danger{
+    display: flex;
+    flex: 1;
+    margin-left: 210px;
+    margin-bottom: 10px;
+    color:  #99ff33; /*#d2ff4d;*/
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;;
+}
 
 .botones{
     display: flex;
@@ -116,7 +123,7 @@ body {
 
     .campo{
         display: block;
-        margin-bottom: 30px;
+        margin-bottom: 12px;
     }
 
     .campo label{
@@ -144,6 +151,14 @@ body {
         width: 70px;
         font-size: 12px;
     }
+
+    .text-danger{
+        display: block;
+        width: auto;
+        margin-left: 10px;
+        font-size: 12px;
+    }
+
 }
 
 
@@ -159,7 +174,7 @@ body {
 
     .campo{
         display: block;
-        margin-bottom: 30px;
+        margin-bottom: 16px;
     }
 
     .campo label{
@@ -186,6 +201,13 @@ body {
         width: 80px;
         font-size: 14px;
     }
+
+    .text-danger{
+        display: block;
+        margin-left: 5px;
+        font-size: 14px;
+    }
+
 
 }
 
