--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -28,11 +28,12 @@
       <a href="#"><i class="fa fa-map-marked"></i>Jujuy, Argentina</a>
     </div>
 
-    <form action="#" autocomplete="off">
+    <form action="#" method="POST" autocomplete="off">
       <input type="text" name="name" placeholder="Nombre" class="campo">
       <input type="email" name="mail" placeholder="Email" class="campo">
       <textarea name="mensaje" placeholder="Ingresa tu mensaje..."></textarea>
-      <input type="submit" name="enviar" value="Enviar" class="btn-enviar">
+      <button  class="btn-enviar">Enviar</button>
+      <!--input type="submit" name="enviar" value="Enviar" class="btn-enviar"-->
     </form>
 
   </div> 
