--- a/src/views/formEdicionProducto.ejs
+++ b/src/views/formEdicionProducto.ejs
@@ -26,34 +26,84 @@
                     <label for="name">Nombre del Producto:</label>
                     <input type="text" id="name" name="title" class="form-input" value="<%= idBuscado.title %>">
                 </div>
+                <% if (locals.errors && errors.title) { %>
+                    <div class="text-danger">
+                        <%= errors.title.msg %>
+                    </div>
+                <% } %>
+
                 <div class="campo">
-                    <label for="name">color del Producto:</label>
+                    <label for="name">Color del Producto:</label>
                     <input type="text" id="name" name="colors" class="form-input" value="<%= idBuscado.colors %>">
                 </div>
-    
+                <% if (locals.errors && errors.colors) { %>
+                    <div class="text-danger">
+                        <%= errors.colors.msg %>
+                    </div>
+                <% } %>
+
                 <div class="campo">
-                    <label for="category">Categoría:</label>
-                    <input type="text" id="category" name="category" class="form-input" value="<%= idBuscado.category %>">
+                    <label for="category" class="form-label">Categoría:</label>
+                    <select name="category" id="category"  class="options">
+                        <% if (idBuscado.category == 'visited') { %>
+                            <option value="visited" selected>Productos Principales</option>
+                            <option value="in-sale">En Oferta</option>
+                        <% } else { %> 
+                            <option value="visited">Productos Principales</option>
+                            <option value="in-sale" selected>En Oferta</option>
+                        <% } %>
+                    </select>
                 </div>
-    
+                <% if (locals.errors && errors.category) { %>
+                    <div class="text-danger">
+                        <%= errors.category.msg %>
+                    </div>
+                <% } %> 
+
                 <div class="campo">
                     <label for="price">Precio:</label>
                     <input type="text" id="price" name="price" step="0.01" class="form-input" value="<%= idBuscado.price %>">
                 </div>
-    
+                <% if (locals.errors && errors.price) { %>
+                    <div class="text-danger">
+                        <%= errors.price.msg %>
+                    </div>
+                <% } %>
+
                 <div class="campo">
                     <label for="description">Descripción:</label>
                     <textarea id="description" name="descripcion" rows="4" class="form-input" ><%= idBuscado.descripcion %></textarea>
                 </div>
-    
+                <% if (locals.errors && errors.descripcion) { %>
+                    <div class="text-danger">
+                        <%= errors.descripcion.msg %>
+                    </div>
+                <% } %>
+
+                <div class="campo">
+                    <label for="descount">Descuento:</label>
+                    <input type="text" id="descount" name="descuont" value="<%= idBuscado.descuont %>">
+                </div>
+                <% if (locals.errors && errors.descuont) { %>
+                    <div class="text-danger">
+                        <%= errors.descuont.msg %>
+                    </div>
+                <% } %>
+
                 <div class="campo">
                     <label for="image">Imagen:</label>
                     <input type="file" id="image" name="img" accept="image/*" class="input-img" class="form-input" value="<%= idBuscado.img %>">
                 </div>
+                <% if (locals.errors && errors.img) { %>
+                    <div class="text-danger">
+                        <%= errors.img.msg %>
+                    </div>
+                <% } %>
+
     
                 <div class="botones">
-                    <input class="btn-cancelar" type="submit" value="Cancelar">
-                    <input class="btn-guardar" type="submit" value="Guardar">
+                    <a href="/productos/catalogo"><button type="button" class="btn-cancelar">Cancelar</button></a>
+                    <button class="btn-guardar" type="submit">Guardar</button>
                 </div>
             </form>
         </div>
