se realizó validaciones en formulario register y login, se agregó y modifico archivos middlewares, se editó usuarios controller, usuarios rutas, vistas y css de login y register.

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -87,13 +87,19 @@ body {
     padding: 10px;
     color: white;
     margin: 16px 0;
-    font-size: 18px;
+    font-size: 12px;
 }
 
 .button_ingresar:hover{
     background-color: #6eacf7;
 }
 
+.text-danger{
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
 
 
 /* Media Queries*/
