--- a/public/css/register.css
+++ b/public/css/register.css
@@ -32,10 +32,12 @@ body {
     text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
 }
 
-label{
+.form-register label{
     color:black;
     font-weight: bold;
     font-size: 12px;
+    margin-top: 16px;
+    display: block;
 }
 
 ::placeholder{
@@ -47,7 +49,7 @@ label{
     background: white;
     padding: 10px;
     border-radius: 4px;
-    margin-bottom: 16px;
+    margin-bottom: 0px;
     border: 1px solid #d0b6b7;
     font-family: 'calibri';
     font-size: 16px;
@@ -60,6 +62,7 @@ input.form-img{
     width: 100%;
     padding: 10px;
     background-color: white;
+    margin-bottom: 0px;
 }
 
 .form-register p {
@@ -89,12 +92,19 @@ input.form-img{
     padding: 12px;
     color: white;
     margin: 16px 0;
-    font-size: 16px;
+    font-size: 13px;
 
 }
 
 .form-register .botom:hover{
     background-color: #6eacf7;
+}
+
+.text-danger{
+    color: red;
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 
