--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -20,29 +20,31 @@
             <h5>Bienvenido a Hebra Libre</h5>
 
             <div class="form-group">
-            <input class="input-text" type="text" name="email" placeholder="Email" id="username" data-testid="emailInput" value="">
+            <input class="input-text" type="text" name="email" placeholder="Email" id="username" data-testid="emailInput" value="<%= locals.oldData ? oldData.email : null %>">
+            </div>
             <% if (locals.errors && errors.email) { %>
-            <div class="text-danger">
-                <%= errors.email.msg %>
-            </div>
+                <div class="text-danger">
+                    <%= errors.email.msg %>
+                </div>
             <% } %>
-            </div>
         
             <div class="form-group">
                 <input class="input-text" name="password" type="password" placeholder="Contraseña" autocomplete="false" id="password">
             </div>
+            <% if (locals.errors && errors.password) { %>
+                <div class="text-danger">
+                    <%= errors.password.msg %>
+                </div>
+            <% } %>
 
             <div class="contenedor-recuperar">
-               
                 <input type="checkbox" id="recordar" name="recordar">
                 <label for="recordar" class="estilo-label">Recordarme</label>
                 <br>
             </div>
-            
-            <div class="form-group">
-                <button id="SubmitLoginButton" class="button_ingresar" type="submit" data-testid="submitButton">
-                    <span class="button_text">Ingresar</span>
-                </button>
+
+            <div>
+                <button class="button_ingresar" type="submit">INGRESAR</button>
             </div>
         
             </form>
