se resulve conflicto presentado en archivos controller/usuarios controller/usuarios

--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -51,7 +51,7 @@
                     <% for (let i=0; i < 4; i++) { %>
                         <% if (color[i] && color[i].img) { %>
                             <img id="enlaceEditar" src="/img/<%= color[i].img %>" alt="Imagen Adicional <%= i + 1 %>"
-                                onclick="cambiarImagen('/img/<%= color[i].id %>')"> 
+                                onclick="cambiarImagen('/img/<%= color[i].img %>')"> 
                         <% } %>
                     <% } %>
                 </div>
