--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -17,9 +17,9 @@
     <%- include('./partials/header.ejs')%>
     <main>
         <div class="profile-contenedor">
-            <img src="/img/<% user.img %>" alt="<% user.username %>">
-            <h2><% user.username %></h2>
-            <p><% user.email %></p>
+            <img src="/img/<% user.img %>" alt="<% user.username %>">  
+            <h2><%= user.firstName %></h2>
+            <p><%=  user.email %></p>
         </div>
     </main>
 </body>
