--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -15,7 +15,7 @@
 <body>
     <%- include('./partials/header.ejs')%>
 
-    <% if (errors && errors.length > 0) { %>
+    <% if (locals.errors && errors.length > 0) { %>
         <% errors.forEach(error => { %>
             <p><%= error.email.msg %></p>
         <% }); %>
