--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -19,21 +19,18 @@
                 <% if(locals.userLogged ){ %>  
                 <li><a href=  "/"   >Inicio</a></li>
                 <li><a href='/productos/catalogo' >Productos</a></li>
-                <li><a href='/contact'  >Contacto</a></li>
-                <li><a href='/usuarios/register'  >Crear Cuenta</a></li> 
-                <!-- <li><a href='/usuarios/login'  >Ingresar</a></li> -->
+                <li><a href='/productos/carrito'  >Carrito de Compras</a></li> 
+                <li><a href='/contact'  >Contacto</a></li>           
                 <li><a href='/usuarios/profile'> 
                     <img src="/img/<%= locals.userLogged.avatar %>" width="30" style="border-radius: 100%;">          
                 </a></li> 
                 <li><a href='/usuarios/logOut' >Salir</a></li>
                 <% }else { %>
-
                 <li><a href=  "/"   >Inicio</a></li>
                 <li><a href='/productos/catalogo' >Productos</a></li>
                 <li><a href='/contact'  >Contacto</a></li>
                 <li><a href='/usuarios/register'  >Crear Cuenta</a></li>
-                <li><a href='/usuarios/login'  >Ingresar</a></li>
-                
+                <li><a href='/usuarios/login'  >Ingresar</a></li>               
                 <% } %>
               
             </ul>
