--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -52,6 +52,6 @@
     </div>
     </main>
     </div>
-    <button onclick="window.location.href = '/';">Volver al inicio</button>
+    <button>Volver al inicio</button>
 </body>
 </html>
