--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -32,7 +32,7 @@
     <div class="purchase-item">
         <span class="timestamp">12 de marzo de 2024</span>
         <div class="content">
-            <p>Compra realizada: Bordado Flor</p>
+            <p>Compra realizada: "Bordado Flor"</p>
         </div>
         <div class="details">
             <p>Precio: $100.00</p>
@@ -43,7 +43,7 @@
     <div class="purchase-item">
         <span class="timestamp">5 de marzo de 2024</span>
         <div class="content">
-            <p>Compra realizada: Libro "Bordado Pachamama"</p>
+            <p>Compra realizada: "Bordado Pachamama"</p>
         </div>
         <div class="details">
             <p>Precio: $100.00</p>
