Se realiza consultas sql en usuarios/controller para realizar CRUD de usuarios.Se ajusta tipo de datos en columna image en modelo User para recibir una ruta de imagen originada por Multer

--- a/src/views/editUser.ejs
+++ b/src/views/editUser.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Crear Cuenta </title>
+    <title> Editar usuario</title>
     <link rel="stylesheet"  href="/css/register.css">
     <link href="/css/header-footer.css" rel="stylesheet">
 
@@ -20,11 +20,11 @@
             <p><%= error.email.msg %></p>
         <% }); %>
     <% } %>
-    <form action="/usuarios/register" method="POST" class="form-register" enctype="multipart/form-data">
-        <h4>Registrate en Hebra Libre</h4>
+    <form action="/usuarios/proccesForm" method="POST" class="form-register" enctype="multipart/form-data">
+        <h4>Editar usuario</h4>
         <div>
             <label for="name">NOMBRE</label>
-            <input class="controls" type="text" name="firstName" id="name" placeholder="ej: Juan" value="<%= locals.oldData ? oldData.firstName : null %>">
+            <input class="controls" type="text" name="firstName" id="name" placeholder="ej: Juan" value="<%= user.first_name %>">
         </div>
         <% if (locals.errors && errors.firstName) { %>
             <div class="text-danger">
@@ -34,7 +34,7 @@
 
         <div>
             <label for="lastname">APELLIDO</label>
-            <input class="controls" type="text" name="lastName" id="lastname" placeholder="ej: Pérez" value="<%= locals.oldData ? oldData.lastName : null %>">
+            <input class="controls" type="text" name="lastName" id="lastname" placeholder="ej: Pérez" value="<%= user.last_name %>">
         </div>
         <% if (locals.errors && errors.lastName) { %>
             <div class="text-danger">
@@ -62,7 +62,7 @@
 
         <div>
             <label for="email">EMAIL</label>
-            <input class="controls" type="text" name="email" id="email" placeholder="ej: juanperez@email.com" value="<%= locals.oldData ? oldData.email : null %>">
+            <input class="controls" type="text" name="email" id="email" placeholder="ej: juanperez@email.com" value="<%= user.email %>">
         </div>
         <% if (locals.errors && errors.email) { %>
             <div class="text-danger">
@@ -83,6 +83,7 @@
         <div>
             <label for="avatar">FOTO DE PERFIL (.jpg, .png, .gif)</label>
             <input type="file" id="avatar" name="avatar" accept="image/*" class="form-img">
+            
         </div>
         <% if (locals.errors && errors.avatar) { %>
             <div class="text-danger">
@@ -91,10 +92,13 @@
         <% } %>
 
         <div>
-            <button class="botom" type="submit">CREAR CUENTA</button>
-        </div>
-        
+            <button class="botom" type="submit">EDITAR USUARIO</button>
+            
+        </div>  
         <p>¿Tienes una cuenta? <a href="/usuarios/login">Iniciar sesión</a></p>
+    </form>
+    <form action="/usuarios/deleteUser/<%= user.id %>" method="POST" class="form-register">
+        <button class="botom" type="submit">ELIMINAR USUARIO</button>
     </form>
     <%- include('./partials/footer.ejs')%>   
 </body>
