--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -22,7 +22,7 @@
                 <li><a href='/productos/carrito'  >Carrito de Compras</a></li> 
                 <li><a href='/contact'  >Contacto</a></li>           
                 <li><a href='/usuarios/profile'> 
-                    <img src="/img/<%= locals.userLogged.avatar %>" width="30" style="border-radius: 100%;">          
+                    <img src="/img/<%= locals.userLogged.image %>" width="30" style="border-radius: 100%;">          
                 </a></li> 
                 <li><a href='/usuarios/logOut' >Salir</a></li>
                 <% }else { %>
