--- a/src/views/formAltaProducto.ejs
+++ b/src/views/formAltaProducto.ejs
@@ -45,9 +45,11 @@
             <div class="campo">
                 <label for="category" class="form-label">Categoría:</label>
                 <select name="category" id="category"  class="options">
-                    <option value="">Elegí una opción</option>
-                    <option value="visited" <%= locals.oldData && oldData.category === 'visited' ? 'selected' : '' ; %>>Productos Principales</option>
-                    <option value="in-sale" <%= locals.oldData && oldData.category === 'in-sale' ? 'selected' : '' ; %>>En Oferta</option>
+                    <% for (let i= 0; i < categorias.length; i++) { %>
+                        <option value="<%=categorias[i].id%>">
+                            <%=categorias[i].name %>
+                        </option>
+                    <% } %>
                 </select>
             </div> 
             <% if (locals.errors && errors.category) { %>
@@ -77,8 +79,8 @@
             <% } %>
 
             <div class="campo">
-                <label for="descount">Descuento:</label>
-                <input type="text" id="descount" name="descuont" value="<%= locals.oldData ? oldData.descuont : null %>">
+                <label for="discount">Descuento:</label>
+                <input type="text" id="discount" name="discount" value="<%= locals.oldData ? oldData.descuont : null %>">
             </div>
             <% if (locals.errors && errors.descuont) { %>
                 <div class="text-danger">
