--- a/src/views/formEdicionProducto.ejs
+++ b/src/views/formEdicionProducto.ejs
@@ -21,10 +21,10 @@
 
             <h4>Edición de Producto</h4>
     
-            <form action="/productos/edit/<%=idBuscado.id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="formulario" >
+            <form action="/productos/edit/<%=producto.id%>?_method=PUT" method="POST" enctype="multipart/form-data" class="formulario" >
                 <div class="campo">
                     <label for="name">Nombre del Producto:</label>
-                    <input type="text" id="name" name="title" class="form-input" value="<%= idBuscado.title %>">
+                    <input type="text" id="name" name="title" class="form-input" value="<%= producto.title %>">
                 </div>
                 <% if (locals.errors && errors.title) { %>
                     <div class="text-danger">
@@ -34,7 +34,7 @@
 
                 <div class="campo">
                     <label for="name">Color del Producto:</label>
-                    <input type="text" id="name" name="colors" class="form-input" value="<%= idBuscado.colors %>">
+                    <input type="text" id="name" name="colors" class="form-input" value="<%= producto.colors %>">
                 </div>
                 <% if (locals.errors && errors.colors) { %>
                     <div class="text-danger">
@@ -45,12 +45,12 @@
                 <div class="campo">
                     <label for="category" class="form-label">Categoría:</label>
                     <select name="category" id="category"  class="options">
-                        <% if (idBuscado.category == 'visited') { %>
-                            <option value="visited" selected>Productos Principales</option>
-                            <option value="in-sale">En Oferta</option>
+                        <% if (categorias.name == 'Productos Principales') { %>
+                            <option value="Productos Principales" selected>Productos Principales</option>
+                            <option value="En Oferta">En Oferta</option>
                         <% } else { %> 
-                            <option value="visited">Productos Principales</option>
-                            <option value="in-sale" selected>En Oferta</option>
+                            <option value="Productos Principales">Productos Principales</option>
+                            <option value="En Oferta" selected>En Oferta</option>
                         <% } %>
                     </select>
                 </div>
@@ -62,7 +62,7 @@
 
                 <div class="campo">
                     <label for="price">Precio:</label>
-                    <input type="text" id="price" name="price" step="0.01" class="form-input" value="<%= idBuscado.price %>">
+                    <input type="text" id="price" name="price" step="0.01" class="form-input" value="<%= producto.price %>">
                 </div>
                 <% if (locals.errors && errors.price) { %>
                     <div class="text-danger">
@@ -72,7 +72,7 @@
 
                 <div class="campo">
                     <label for="description">Descripción:</label>
-                    <textarea id="description" name="descripcion" rows="4" class="form-input" ><%= idBuscado.descripcion %></textarea>
+                    <textarea id="description" name="descripcion" rows="4" class="form-input" ><%= producto.description %></textarea>
                 </div>
                 <% if (locals.errors && errors.descripcion) { %>
                     <div class="text-danger">
@@ -81,8 +81,8 @@
                 <% } %>
 
                 <div class="campo">
-                    <label for="descount">Descuento:</label>
-                    <input type="text" id="descount" name="descuont" value="<%= idBuscado.descuont %>">
+                    <label for="discount">Descuento:</label>
+                    <input type="text" id="discount" name="discount" value="<%= producto.discount %>">
                 </div>
                 <% if (locals.errors && errors.descuont) { %>
                     <div class="text-danger">
@@ -92,7 +92,7 @@
 
                 <div class="campo">
                     <label for="image">Imagen:</label>
-                    <input type="file" id="image" name="img" accept="image/*" class="input-img" class="form-input" value="<%= idBuscado.img %>">
+                    <input type="file" id="image" name="img" accept="image/*" class="input-img" class="form-input" value="<%= producto.img %>">
                 </div>
                 <% if (locals.errors && errors.img) { %>
                     <div class="text-danger">
