--- a/src/views/producto.ejs
+++ b/src/views/producto.ejs
@@ -21,29 +21,30 @@
                 <h3>Productos principales</h3>
                 <div class="products_principal">
                     <div class="imgPrinc-carrito">
-                        <img id="imagenPrincipal" src="/img/<%= idBuscado.img %>" alt="imagenPrincipal">
+                        <img id="imagenPrincipal" src="/img/<%= producto.img %>" alt="imagenPrincipal">
                         <a href='/productos/carrito' class="icono-truck"> <i class="fas fa-truck"></i> </a>
                     </div>
                     <div class="contenido_producto">
                         <h4 class="titulo">
-                            <%= idBuscado.title %>
+                            <%= producto.title %>
                         </h4>
                         <p class="descrpcion_producto">
-                            <%= idBuscado.descripcion %>
+                            <%= producto.description %>
                         </p>
                         <div class="botones">
                             <a href="/productos/carrito" class="comprar-producto">Agregar al carrito</a>
                             <div class="editar-eliminar">
-                                <a href="/productos/edit/<%= idBuscado.id %>" class="editar-producto">Editar</a>
-                                <form action="/productos/delete/<%= idBuscado.id %>?_method=DELETE" method="post">
+                                <a href="/productos/edit/<%= producto.id %>" class="editar-producto">Editar</a>
+                                <form action="/productos/delete/<%= producto.id %>?_method=DELETE" method="post">
                                     <button onclick="eliminarProducto()">Eliminar</button>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
+                <% /* %>
                 <div class="imagenes-adicionales">
-                    <script>
+                     <script>
                         function cambiarImagen(rutaImagen) {
                             document.getElementById("imagenPrincipal").src = rutaImagen;
                         }
@@ -53,8 +54,9 @@
                             <img id="enlaceEditar" src="/img/<%= color[i].img %>" alt="Imagen Adicional <%= i + 1 %>"
                                 onclick="cambiarImagen('/img/<%= color[i].img %>')"> 
                         <% } %>
-                    <% } %>
+                    <% } %> 
                 </div>
+                <% */ %>
             </section>
 
         </main>
