se realiza pruebas para validaciones de login

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -74,7 +74,7 @@
             <label for="password">CONTRASEÑA</label>
             <input class="controls" type="password" name="password" id="password">
         </div>
-        <% if (locals.errors && errors.password) { %>
+        <% if (locals.errors && errors.password) { %>2
             <div class="text-danger">
                 <%= errors.password.msg %>
             </div>
