--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,56 +1,40 @@
-
 <header>
     <div class="media">
-        
+
         <div class="nav-bar">
-                <a href="/"><img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo"></a>
+            <a href="/"><img src="/img/logo-sin-fondo-prueba.png" alt="Logo" class="logo"></a>
         </div>
         <div class="nav-bar">
-            <div class="burger-menu">
-                <a href="#" target="_blank"><i class="fas fa-bars"></i></a>
-            </div>
             <div class="enlaces-contenedor">
                 <div class="redes">
                     <a href="https://www.instagram.com/hebralibre/" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.facebook.com/soyhebralibre" target="_blank"><i class="fab fa-facebook"></i></a>
                     <a href="https://wa.me/+5493884175520" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
-            <ul class="enlaces">
-                <% if(locals.userLogged ){ %>  
-                <li><a href=  "/"   >Inicio</a></li>
-                <li><a href='/productos/catalogo' >Productos</a></li>
-                <li><a href='/productos/carrito'  >Carrito de Compras</a></li> 
-                <li><a href='/contact'  >Contacto</a></li>           
-                <li><a href='/usuarios/profile'> 
-                    <img src="/img/<%= locals.userLogged.image %>" width="30" style="border-radius: 100%;">          
-                </a></li> 
-                <li><a href='/usuarios/logOut' >Salir</a></li>
-                <% }else { %>
-                <li><a href=  "/"   >Inicio</a></li>
-                <li><a href='/productos/catalogo' >Productos</a></li>
-                <li><a href='/contact'  >Contacto</a></li>
-                <li><a href='/usuarios/register'  >Crear Cuenta</a></li>
-                <li><a href='/usuarios/login'  >Ingresar</a></li>               
-                <% } %>
-              
-            </ul>
-            <!-- <ul class="enlaces"> -->
-                         
-                    <!-------FALTA AGREGAR VALIDACION DE USUARIO LOGUEADO-------->
-                <!--    
-                <li><a href='/productos/carrito'  ><i class="fas fa-shopping-cart"></i></a></li>
-                <li><a href='#' >Mi Cuenta</a></li>
-                <li><a href='#' >Salir</a></li>
-                --> 
-                <!-- <li><a href='/usuarios/register'  >Crear Cuenta</a></li>
-                <li><a href='/usuarios/login'  >Ingresar</a></li>
-                
-            </ul> -->
-             
+                <div class="burger-menu" >
+                    <a href="#" id="burger-tab"><i class="fas fa-bars"></i></a>
+                </div>
+                <ul class="enlaces show" id="enlaces-tab">
+                    <% if(locals.userLogged ){ %>
+                        <li><a href="/">Inicio</a></li>
+                        <li><a href='/productos/catalogo'>Productos</a></li>
+                        <li><a href='/productos/carrito'>Carrito de Compras</a></li>
+                        <li><a href='/contact'>Contacto</a></li>
+                        <li><a href='/usuarios/profile'>
+                                <img src="/img/<%= locals.userLogged.image %>" width="30" style="border-radius: 100%;">
+                            </a></li>
+                        <li><a href='/usuarios/logOut'>Salir</a></li>
+                        <% }else { %>
+                            <li><a href="/">Inicio</a></li>
+                            <li><a href='/productos/catalogo'>Productos</a></li>
+                            <li><a href='/contact'>Contacto</a></li>
+                            <li><a href='/usuarios/register'>Crear Cuenta</a></li>
+                            <li><a href='/usuarios/login'>Ingresar</a></li>
+                            <% } %>
+
+                        </ul>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>       
+            <script src="js/header.js"></script>
 </header>
-
-
-
